# serializer version: 1
# name: test_launchd_create_service_file
  '''
  <?xml version="1.0" encoding="UTF-8"?>
  <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
  <plist version="1.0">
      <dict>
          <key>Label</key>
          <string>pictorus_device_manager</string>
          <key>Program</key>
          <string>some_bin_path</string>
  
          <key>StandardErrorPath</key>
          <string>/tmp/pictorus.err</string>
          <key>StandardOutPath</key>
          <string>/tmp/pictorus.out</string>
      </dict>
  </plist>
  
  '''
# ---
# name: test_sudosystemd_create_service_file
  '''
  
  [Unit]
  Description=some_description
  
  [Service]
  ExecStart=some_bin_path
  Restart=always
  RestartSec=5s
  
  [Install]
  WantedBy=multi-user.target
  
  '''
# ---
# name: test_systemd_create_service_file
  '''
  
  [Unit]
  Description=some_description
  
  [Service]
  ExecStart=some_bin_path
  Restart=always
  RestartSec=5s
  
  [Install]
  WantedBy=default.target
  
  '''
# ---
